DNAnexus Upload Agent 1.2.9 <support@dnanexus.com>, 2013-Apr-22
---------------------------------------------------------------
  * Minor bug fix

DNAnexus Upload Agent 1.2.8 <support@dnanexus.com>, 2013-Apr-22
---------------------------------------------------------------
  * [PTFM-7251] SIGPIPE bug fix (UA crashed mysteriously sometime with exit code: 141)
  * Using libcurl version 7.30 (forcing UA to use >= 7.30, so that we ensure that we make transition on all platforms)
    Also --version flag now prints Boost and libcurl versions
  * Capping maximum number of (default) compress threads to 8
  * Support for DX_LIBCURL_VERBOSE is added
  * More detailed error message is read from libcurl when /UPLOAD request fails
  * chunk::log() now accepts level as a configurable param
  * Setting CURLOPT_TIMEOUT to unlimited (0) in /UPLOAD route too

DNAnexus Upload Agent 1.2.7 <support@dnanexus.com>, 2013-Mar-14
---------------------------------------------------------------
  * Relevant JIRA tickets: PTFM-4459, PTFM-6628, PTFM-6629
  * Compiling UA with "-O3" flag now
  * Fix a thread race condition while printing error message
    for bad_alloc case
  * Append null gzipped bytes for chunks compressing less than 5MB
    (instead of previous behavior of compressing at level 0)
  * Bug fix: Average transfer rate was incorrectly reported when
    file compression was on

DNAnexus Upload Agent 1.2.6 <support@dnanexus.com>, 2013-Mar-12
---------------------------------------------------------------
  * https://github.com/dnanexus/dx-toolkit/commit/bd7d2fa306aa90fd06580cfc86fabc94b64d9772
    - User Agent string of Upload Agent is updated to include platform
      (and also dxcpp/dxhttp version for /UPLOAD requests)
    - Added some sleep() to compress/read/upload threads, to ensure
      that we yield to other threads
    - Using DXLOG for logging in Upload Agent now
  * New default values for chunk-size, number of threads (upload/read/compress)